# KaggleFold

./: Contributing.md  LICENSE  README.md  pyproject.toml  setup_databases.sh
TemplateServer/: README.md  go.mod
beta/: kagglefold.py  kagglefold_alphafold.py
kagglefold/: batch.py  citations.py  download.py  kagglefold.py  kagglefold_alphafold.py  utils.py
kagglefold/mmseqs/: merge_and_split_msas.py  search.py  split_msas.py
tests/: mock.py  test_kagglefold.py  test_msa.py  test_utils.py
