[tool.poetry]
name = "kagglefold"
version = "1.0"
description = "Making protein folding accessible to all. Predict proteins structures both in google colab and on your machine"
authors = [
    "Milot Mirdita <milot.mirdita@mpibpc.mpg.de>",
    "Sergey Ovchinnikov <so@fas.harvard.edu>",
    "Martin Steinegger <martin.steinegger@snu.ac.kr>",
    "Kostantin Schütze <schuetze@in.tum.de>",
    "Yoshitaka Moriwaki",
    "Lim Heo",
    "Victor Fdez <victor.fernandez.albor@gmail.com>"
]
readme = "README.md"
license = "MIT, but separate licenses for the trained weights"
repository = "https://github.com/vfalbor/KaggleFold"
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
absl-py = "^0.13.0"
alphafold-kagglefold = { version = "2.1.4", optional = true }
jax = { version = "^0.2.20", optional = true }
matplotlib = "3.1.3"
numpy = "^1.19.0"
requests = "^2.26.0"
tensorflow-cpu = "^2.6.0"
tqdm = "^4.62.2"
pandas = "^1.3.3"
appdirs = "^1.4.4"
py3Dmol = "^1.7.0"
dm-haiku = "^0.0.4"
importlib-metadata = "^4.8.2"

[tool.poetry.dev-dependencies]
# The latest version conflicts with tensorflow over typing-extensions
black = "v21.12b0"
jupyter = "^1.0.0"
pytest = "^6.2.5"

[tool.poetry.extras]
alphafold = ["alphafold-kagglefold", "jax"]

[tool.pytest.ini_options]
addopts = "--tb=short"

[tool.poetry.scripts]
kagglefold_batch = 'kagglefold.batch:main'
kagglefold_search = 'kagglefold.mmseqs.search:main'
kagglefold_split_msas = 'kagglefold.mmseqs.split_msas:main'

[tool.black]
# Format only the new package, don't touch the existing stuff
include = '''
/(
  | kagglefold
  | tests
)/
'''
# The kagglefold.py exclude doesn't work, but the "fmt: off" inside of it does
extend-exclude = '''
/(
  | __pycache__
  | kagglefold/kagglefold.py
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
